refactor: code quality improvements across backend and frontend
Backend:
- Extract SecurityUtils component to eliminate duplicated getCurrentUser() in TaskService/DashboardService
- Add sortOrder to TaskPriority enum, replacing service-layer priorityOrder() helper
- Apply Pattern.quote() on user-supplied regex inputs in TaskRepositoryImpl to prevent ReDoS
- Centralise max page size with @Value instead of hardcoded 100
- Add @Email on TaskRequest.assigneeEmail, @Size(max=5000) on description
- Remove @Size(min=6) from LoginRequest.password (validation logic blocks valid logins)
- Remove @ResponseStatus from custom exceptions handled by @RestControllerAdvice
- Replace Collectors.toList() with stream.toList() (Java 16+)
- Remove email from error message in AuthService to prevent enumeration
- Add TOKEN_TYPE constant in AuthResponse replacing hardcoded "Bearer"
- Remove dead import in DashboardResponse

Frontend:
- Export EMAIL_REGEX, STATUS_OPTIONS, PRIORITY_OPTIONS from helpers.js as single source of truth
- Export STORAGE_KEYS constant from api.js; use throughout authSlice and interceptors
- TaskFilters/TaskForm derive options from helpers.js, eliminating duplicate declarations
- DashboardPage uses STATUS_CONFIG/PRIORITY_CONFIG.color for chart fills (consistent palette)
- Fix key={index} -> key={entry.name} on recharts Cell components
- Merge duplicate authSlice imports in LoginPage
- Remove dead w-4.5 h-4.5 Tailwind classes in Sidebar SVG
- Remove dead else branch in TasksPage filter useEffect (search is never undefined)
- Remove inline JSX section-label comments across multiple components
- Fix copyright year to use new Date().getFullYear()

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>